@@ -13,9 +13,9 @@ Bug fixes:
 
 New features:
  * Support for PDF metatags in advanced file rename templates
+ * Revamped advanced file rename tool (regex backreferences ('\number'), profiles,
+   upper/lowercase conversion, blanks trimming and much more)
  * Support for metadata tags in internal viewer
- * Support for regex backreferences ('\number') in advanced file rename tool (since GLib 2.14)
- * Advanced file rename tool - upper/lowercase conversion and trimming blanks
  * New colour theme: cafezinho
  * New or updated docs: de, en, es
  * New or updated translations: ar, de, es, eu, pl
